# plato-smart-device-client

./: Cargo.toml  README.md  deploy.sh
src/: error.rs  logger.rs  main.rs  message.rs  metadata.rs  settings.rs  smart_device_client.rs  types.rs
