[package]
name = "plato-smart-device-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.45"
const_format = "0.2.22"
chrono = "0.4.19"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
signal-hook = "0.3.10"
toml = "0.5.8"
lazy_static = "1.4.0"
nix = "0.23.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
sha-1 = "0.9.8"
hex = "0.4.3"
thiserror = "1.0.30"
